--- a/packages/sections/src/scss/_component.scss
+++ b/packages/sections/src/scss/_component.scss
@@ -16,8 +16,8 @@
 // .uq-section--padding-bottom-large - adds large bottom padding
 
 .uq-section {
-  padding-top: core.$space-xxxl; // 3.5rem
-  padding-bottom: core.$space-xxxl; // 3.5rem
+  padding-top: core.$space-xxxxxl; // 3.5rem
+  padding-bottom: core.$space-xxxxxl; // 3.5rem
   overflow: hidden;
 
   &__container {
