--- a/packages/storybook-html/stories/components/core/_colour.scss
+++ b/packages/storybook-html/stories/components/core/_colour.scss
@@ -4,11 +4,11 @@
 .uqds-colour__palette {
   width: 100%;
   border-radius: 0.25rem;
-  padding: $space;
+  padding: $space-xxxxxl;
 }
 
 .uqds-colour__palette--large {
-  padding: $space-xl;
+  padding: $space-xxxxxl;
 }
 
 /* Colour table custom sizing */
