--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -31,7 +31,7 @@
 
   &__acknowledgement {
     max-width: 73.25rem;
-    padding: core.$space-l core.$space-m;
+    padding: core.$space-l core.$space-xxxxxl;
     color: #d4c8de;
     font-weight: 400;
     font-size: core.$font-size;
@@ -43,13 +43,13 @@
     flex-wrap: wrap;
 
     @media #{core.$screen-xl-up} {
-      padding: core.$space-l core.$space;
+      padding: core.$space-l core.$space-xxxxxl;
     }
   }
 
   &__acknowledgement-flag {
     width: 2.25rem;
-    height: core.$space-m;
+    height: core.$space-xxxxxl;
 
     &:first-child {
       margin-right: core.$space-s;
@@ -57,13 +57,13 @@
   }
 
   &__acknowledgement-text {
-    margin-top: core.$space;
+    margin-top: core.$space-xxxxxl;
     flex-basis: 100%;
 
     @media #{core.$screen-xl-up} {
       flex-basis: auto;
       margin-top: core.$space-none;
-      padding-left: core.$space-m;
+      padding-left: core.$space-xxxxxl;
     }
   }
 
@@ -121,7 +121,7 @@
 
   &__navigation-link {
     display: block;
-    padding: core.$space core.$space-m;
+    padding: core.$space core.$space-xxxxxl;
     color: core.$uq-white;
 
     &:hover {
@@ -150,7 +150,7 @@
 
     @media #{core.$screen-lg-up} {
       grid-template-columns: repeat(5, 1fr);
-      grid-gap: core.$space;
+      grid-gap: core.$space-xxxxxl;
     }
 
     @media #{core.$screen-xl-up} {
@@ -201,12 +201,12 @@
       core.$uq-white
     ));
     background-repeat: no-repeat;
-    width: core.$space-m;
-    height: core.$space-m;
+    width: core.$space-xxxxxl;
+    height: core.$space-xxxxxl;
     transform: translateY(50%);
     position: absolute;
     top: core.$space-xs;
-    right: core.$space-m;
+    right: core.$space-xxxxxl;
 
     @media #{core.$screen-lg-up} {
       background-image: none;
@@ -255,7 +255,7 @@
   }
 
   &__footer-item {
-    padding-right: core.$space;
+    padding-right: core.$space-xxxxxl;
   }
 
   /* CONTACT */
@@ -274,7 +274,7 @@
     }
   }
   &__contact-login {
-    margin-top: core.$space-xl;
+    margin-top: core.$space-xxxxxl;
     font-size: core.$font-size-s;
 
     @media #{core.$screen-lg-up} {
@@ -303,8 +303,8 @@
     &::before {
       content: "";
       display: inline-block;
-      height: core.$space-l;
-      width: core.$space-l;
+      height: core.$space-xxxxxl;
+      width: core.$space-xxxxxl;
       background-repeat: no-repeat;
       background-position: center;
       background-size: 100%;
@@ -413,7 +413,7 @@
         background-color: core.$uq-purple;
         color: core.$uq-white;
         font-size: core.$font-size;
-        padding-left: core.$space-m;
+        padding-left: core.$space-xxxxxl;
 
         &:hover {
           color: #d4c8de;
@@ -438,8 +438,8 @@
       "FooterSocial"
       "FooterOrg"
       "FooterTerms";
-    row-gap: core.$space-xl;
-    padding: core.$space-none core.$space-m core.$space-xl;
+    row-gap: core.$space-xxxxxl;
+    padding: core.$space-none core.$space-m core.$space-xxxxxl;
 
     max-width: 73.25rem;
     width: 100%; /* may not be needed but forces it to take up space when empty */
@@ -447,16 +447,16 @@
     margin-right: auto;
 
     @media #{core.$screen-lg-up} {
-      row-gap: core.$space-l;
-      padding-top: core.$space-l;
+      row-gap: core.$space-xxxxxl;
+      padding-top: core.$space-xxxxxl;
     }
     @media #{core.$screen-xl-up} {
       grid-template-areas:
         "FooterNavigation FooterNavigation"
         "FooterSocial FooterSocial"
         "FooterOrg FooterTerms";
-      row-gap: core.$space-l;
-      padding: core.$space-l core.$space core.$space-xl;
+      row-gap: core.$space-xxxxxl;
+      padding: core.$space-l core.$space core.$space-xxxxxl;
     }
   }
 }
