--- a/packages/loading-spinner/src/scss/_component.scss
+++ b/packages/loading-spinner/src/scss/_component.scss
@@ -5,10 +5,10 @@
   color: core.$uq-purple;
   background-color: transparent;
   border-radius: 50%;
-  height: core.$space-xxl;
+  height: core.$space-xxxxxl;
   padding: core.$space-xs;
   overflow: hidden;
-  width: core.$space-xxl;
+  width: core.$space-xxxxxl;
   -webkit-mask-image: linear-gradient(transparent 50%, #000 0),
     linear-gradient(90deg, transparent 50%, #000 0);
   mask-image: linear-gradient(transparent 50%, #000 0),
@@ -44,8 +44,8 @@
   }
 
   &--small {
-    height: core.$space-m;
-    width: core.$space-m;
+    height: core.$space-xxxxxl;
+    width: core.$space-xxxxxl;
     padding: core.$space-compressed-xs;
 
     &::before {
