updated base variable name and larger sizes to reflect

--- a/packages/core/src/scss/_partials/_space-constants.scss
+++ b/packages/core/src/scss/_partials/_space-constants.scss
@@ -1,17 +1,17 @@
 // Space is calculated as multiples of eight
 // Baseline is default of device or broswer, typically 16px
 
-$space-uuuul: 10rem; /* 160px */
-$space-uuul: 5.5rem; /* 88px */
-$space-uul: 5rem; /* 80px */
-$space-ul: 4.5rem; /* 72px */
-$space-xxxxl: 4rem; /* 64px */
-$space-xxxl: 3.5rem; /* 56px */
-$space-xxl: 3rem; /* 48px */
-$space-xl: 2.5rem; /* 40px */
-$space-l: 2rem; /* 32px */
-$space-m: 1.5rem; /* 24px */
-$space: 1rem; /* 16px */ /* Default */
+$space-uuuuul: 10rem; /* 160px */
+$space-uuuul: 5.5rem; /* 88px */
+$space-uuul: 5rem; /* 80px */
+$space-uul: 4.5rem; /* 72px */
+$space-ul: 4rem; /* 64px */
+$space-xxxxl: 3.5rem; /* 56px */
+$space-xxxl: 3rem; /* 48px */
+$space-xxl: 2.5rem; /* 40px */
+$space-xl: 2rem; /* 32px */
+$space-l: 1.5rem; /* 24px */
+$space-m: 1rem; /* 16px */ /* Default */
 $space-s: 0.5rem; /* 8px */
 $space-xs: 0.25rem; /* 4px */
 /* 2px (0.125rem) */
