--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -6,7 +6,7 @@
 .uq-footer {
   background: core.$uq-purple;
   box-sizing: border-box;
-  color: #d4c8de;
+  color: red;
 
   &__reconciliation {
     background: core.$uq-black;
